# multi-project-memory-governance

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  policy_improvement.yml
.github/workflows/: ci.yml
docs/: adoption-guide.md  adoption-matrix.md  agent-collaboration-policy.md  architecture.md  before-after-demo.md  field-guide-from-practice.md  handoff-index-policy.md  memory-governance-policy.md  quickstart.md  related-work.md  release-checklist.md  thin-authority-overlay.md  tooling.md
examples/agent-chaos-before-after/: README.md
examples/agent-chaos-before-after/after/: .hermes.md
examples/agent-chaos-before-after/after/handoff/: INDEX.md  accepted_changes.md  active_strategy_queue.md  memory_governance.md
examples/agent-chaos-before-after/after/handoff/reviews/: 2026-01-01-review-handoff.md
examples/agent-chaos-before-after/after/handoff/worker_tasks/: 2026-01-01-review-handoff.md
examples/agent-chaos-before-after/after/notes/Projects/Demo/: 00_Index.md
examples/agent-chaos-before-after/before/: AGENTS.md
examples/agent-chaos-before-after/before/handoff/: old_strategy.md  random_notes.md  review_final.md
examples/minimal-project/: .hermes.md  README.md
examples/minimal-project/handoff/: INDEX.md  accepted_changes.md  active_strategy_queue.md  memory_governance.md
examples/minimal-project/handoff/reviews/: README.md
examples/minimal-project/handoff/worker_tasks/: README.md
examples/minimal-project/notes/Projects/ExampleProject/: 00_Index.md
examples/multi-agent-review/: .hermes.md  README.md
examples/multi-agent-review/handoff/: INDEX.md  accepted_changes.md  active_strategy_queue.md  memory_governance.md
examples/multi-agent-review/handoff/reviews/: 2026-01-01_review-routing.md
examples/multi-agent-review/handoff/worker_tasks/: 2026-01-01_review-routing.md
examples/public-export/: README.md
scripts/: __init__.py  check_public_safety.py  doctor.py  export_public_subset.py  governance_audit.py  init_governance.py  integration_map.py  mpmg.py  new_worker_task.py  plan_handoff_cleanup.py  resources.py  validate_artifacts.py  validate_governance.py
skills/note-taking/multi-project-memory-routing/: SKILL.md
templates/: active-strategy-queue.md  handoff-memory-governance.md  project-context-snippet.md  review-output.md  worker-task.md
tests/: test_artifact_validator.py  test_cli_and_planner.py  test_future_tools.py  test_governance_scripts.py  test_integration_map.py  test_public_safety.py
