[project]
name = "multi-project-memory-governance"
version = "0.3.0"
description = "Governance kit for preventing AI-agent memory contamination across multi-repo workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hermes Agent community" }]
keywords = ["ai-agents", "memory", "handoff", "obsidian", "governance", "codex", "claude"]

[project.urls]
Homepage = "https://github.com/Jack753951/multi-project-memory-governance"
Repository = "https://github.com/Jack753951/multi-project-memory-governance"
Issues = "https://github.com/Jack753951/multi-project-memory-governance/issues"

[project.scripts]
mpmg-plan-handoff-cleanup = "scripts.plan_handoff_cleanup:main"
mpmg-doctor = "scripts.doctor:main"
mpmg = "scripts.mpmg:main"
mpmg-validate-artifacts = "scripts.validate_artifacts:main"
mpmg-init = "scripts.init_governance:main"
mpmg-validate = "scripts.validate_governance:main"
mpmg-safety-scan = "scripts.check_public_safety:main"
mpmg-export-public = "scripts.export_public_subset:main"
mpmg-worker-task = "scripts.new_worker_task:main"
mpmg-audit = "scripts.governance_audit:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
