[project]
name = "multi-project-memory-governance"
version = "0.3.0"
description = "AI coding agent context hygiene kit for preventing project mixups, memory contamination, stale handoffs, and missing review metadata."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hermes Agent community" }]
keywords = [
  "ai-agents",
  "ai-coding-agents",
  "context-hygiene",
  "agent-memory",
  "memory-governance",
  "agent-project-hygiene",
  "handoff",
  "worker-tasks",
  "review-metadata",
  "agents-md",
  "claude-code",
  "codex",
  "cursor",
  "public-export-safety",
  "obsidian",
  "governance",
]

[project.urls]
Homepage = "https://github.com/Jack753951/multi-project-memory-governance"
Repository = "https://github.com/Jack753951/multi-project-memory-governance"
Issues = "https://github.com/Jack753951/multi-project-memory-governance/issues"

[project.scripts]
mpmg-plan-handoff-cleanup = "scripts.plan_handoff_cleanup:main"
mpmg-doctor = "scripts.doctor:main"
mpmg = "scripts.mpmg:main"
mpmg-validate-artifacts = "scripts.validate_artifacts:main"
mpmg-init = "scripts.init_governance:main"
mpmg-validate = "scripts.validate_governance:main"
mpmg-safety-scan = "scripts.check_public_safety:main"
mpmg-export-public = "scripts.export_public_subset:main"
mpmg-worker-task = "scripts.new_worker_task:main"
mpmg-audit = "scripts.governance_audit:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
