[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "multi-project-memory-governance"
version = "0.3.0"
description = "Thin authority overlay for mapping trust, scope, and freshness across AI coding agent context systems."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Hermes Agent community" }]
keywords = [
  "ai-agents",
  "ai-coding-agents",
  "context-hygiene",
  "agent-memory",
  "memory-governance",
  "agent-project-hygiene",
  "handoff",
  "worker-tasks",
  "review-metadata",
  "agents-md",
  "claude-code",
  "codex",
  "cursor",
  "public-export-safety",
  "obsidian",
  "governance",
]

[project.urls]
Homepage = "https://github.com/Jack753951/multi-project-memory-governance"
Repository = "https://github.com/Jack753951/multi-project-memory-governance"
Issues = "https://github.com/Jack753951/multi-project-memory-governance/issues"

[project.scripts]
mpmg-integration-map = "scripts.integration_map:main"
mpmg-plan-handoff-cleanup = "scripts.plan_handoff_cleanup:main"
mpmg-doctor = "scripts.doctor:main"
mpmg = "scripts.mpmg:main"
mpmg-validate-artifacts = "scripts.validate_artifacts:main"
mpmg-init = "scripts.init_governance:main"
mpmg-validate = "scripts.validate_governance:main"
mpmg-safety-scan = "scripts.check_public_safety:main"
mpmg-export-public = "scripts.export_public_subset:main"
mpmg-worker-task = "scripts.new_worker_task:main"
mpmg-audit = "scripts.governance_audit:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.hatch.build.targets.wheel.force-include]
".github" = "scripts/_kit/.github"
"docs" = "scripts/_kit/docs"
"examples" = "scripts/_kit/examples"
"skills" = "scripts/_kit/skills"
"templates" = "scripts/_kit/templates"
"tests" = "scripts/_kit/tests"
"README.md" = "scripts/_kit/README.md"
"LICENSE" = "scripts/_kit/LICENSE"
"CONTRIBUTING.md" = "scripts/_kit/CONTRIBUTING.md"
"SECURITY.md" = "scripts/_kit/SECURITY.md"
"CODE_OF_CONDUCT.md" = "scripts/_kit/CODE_OF_CONDUCT.md"
"pyproject.toml" = "scripts/_kit/pyproject.toml"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
